--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <script src="{{ url_for('static', filename='jquery-3.5.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='popper.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
+ 
     <script>
             
         
@@ -131,6 +132,12 @@
 
         .btn-group-toggle .btn {
             transition: transform 0.1s, box-shadow 0.1s;
+        }
+    </style>
+    <style>
+        /* Styles for the seach table mouse pointer hover over table column's headers */
+        #home_results_table th {
+            cursor: pointer;
         }
     </style>
 </head>
