Added raw failure data column, need to fix cookie setting on load so it's hidden or not properly

--- a/templates/index.html
+++ b/templates/index.html
@@ -139,6 +139,13 @@
         #home_results_table th {
             cursor: pointer;
         }
+        /* Styles for the raw failure column in home */
+        .raw-failure-column {
+            display: none; /* Initially hidden */
+        }
+        .raw-failure-column .cell-content {
+            font-size: 0.6em; /* Smaller font size */
+        }
     </style>
     
 
