--- a/templates/home.html
+++ b/templates/home.html
@@ -74,6 +74,13 @@
             </select>
             <label for="recordsPerPage"><h6><em>records</em></h6></label>
         </div>
+
+        <div class="col">
+            <label for="show-raw-failures"><h6><em>Show raw failures</em></h6></label>
+            <input type="checkbox" id="show-raw-failures" name="show-raw-failures">
+        </div>
+
+
     </div>
 
     <table id='home_results_table' class="table table-striped">
@@ -84,6 +91,7 @@
                 <th data-column="part_number">Part Number</th>
                 <th data-column="datecode">Datecode</th>
                 <th data-column="country">Country</th>
+                <th class="raw-failure-column" data-column="raw_failure">Raw Failure</th>
                 <th data-column="test_result">Result</th>
             </tr>
         </thead>
@@ -96,6 +104,8 @@
                     <td>{{ unit.part_number }}</td>
                     <td>{{ unit.datecode }}</td>
                     <td>{{ unit.country }}</td>
+                    <td class="raw-failure-column">
+                        <span class="cell-content">{{ unit.raw_failure }}</span></td>
                     <td>{{ unit.test_result }}</td>
                 </tr>
                 {% endfor %}
@@ -191,7 +201,17 @@
                             </select>
                         </div>
                     </div>
+                    
+                    <div class="form-group row">
+                        <label for="rawFailure" class="col-md-4 col-form-label  text-dark"><mark>Raw Failure</mark></label>
+                        <div class="col-md-8">
+                            <textarea class="form-control" id="rawFailure" rows="4"></textarea>
+                        </div>
+                    </div>
+
+
                 </form>
+                
                 
                 <div id="editAlert" class="alert alert-dismissible fade show" role="alert" style="display: none;">
                     <span id="editAlertMessage"></span>
@@ -331,6 +351,7 @@ function setMode(mode) {
                                     <td>${record.part_number}</td>
                                     <td>${record.datecode}</td>
                                     <td>${record.country}</td>
+                                    <td class="raw-failure-column"><span class="cell-content">${record.raw_failure}</span></td>
                                     <td>${record.test_result}</td>
                                 </tr>
                             `);
@@ -474,6 +495,7 @@ function setMode(mode) {
                                         '<td>' + result.part_number + '</td>' +
                                         '<td>' + result.datecode + '</td>' +
                                         '<td>' + result.country + '</td>' +
+                                        '<td class="raw-failure-column"><span class="cell-content">' + result.raw_failure + '</span></td>' +
                                         '<td>' + result.test_result + '</td>' +
                                         '</tr>';
                                     $('#home_results_table tbody').append(row);
@@ -559,7 +581,8 @@ function setMode(mode) {
             $('#partNumber').val(row.eq(2).text());
             $('#datecode').val(row.eq(3).text());
             $('#country').val(row.eq(4).text());
-            $('#testResult').val(row.eq(5).text());
+            $('#testResult').val(row.eq(6).text());
+            $('#rawFailure').val(row.eq(5).text());
             $('#editModal').modal('show');
         });
 
@@ -606,6 +629,7 @@ function setMode(mode) {
                 part_number: $('#partNumber').val(),
                 datecode: $('#datecode').val(),
                 country: $('#country').val(),
+                raw_failure: $('#rawFailure').val(),
                 test_result: $('#testResult').val()
             };
     
@@ -696,9 +720,32 @@ function setMode(mode) {
         }
     });
 
+    // RawFailures column handling
+    // Read the cookie on page load
+    let showRawFailures = getCookie("show_raw_failures") === "true";
+    $("#show-raw-failures").prop("checked", showRawFailures);
+    toggleRawFailureColumn(showRawFailures);
+
+    // Event listener for checkbox change
+    $("#show-raw-failures").change(function() {
+        let isChecked = $(this).is(":checked");
+        setCookie("show_raw_failures", isChecked, 30); // Save for 7 days
+        toggleRawFailureColumn(isChecked);
+    });
+
+    // Function to show/hide the Raw Failure column
+    function toggleRawFailureColumn(show) {
+        if (show) {
+            $(".raw-failure-column").show();
+        } else {
+            $(".raw-failure-column").hide();
+        }
+    }
+
+    // RawFailures column handling ends
 
     
-        });  
+});  
 // Document ready ends
    
  
