added Readme.md, minor fixes on edit modal

--- a/templates/home.html
+++ b/templates/home.html
@@ -220,10 +220,12 @@
                     </button>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger float-left" id="deleteRecordButton">Delete record</button>
-                <button type="button" class="btn btn-secondary" id="dismissButton" data-dismiss="modal">Dismiss</button>
-                <button type="button" class="btn btn-primary" id="saveChangesButton" disabled>Save changes</button>
+            <div class="modal-footer container"> 
+                <div class="row">
+                    <div class="col-4"><button type="button" class="btn btn-danger text-nowrap" id="deleteRecordButton">Delete record</button></div>
+                    <div class="col-4"><button type="button" class="btn btn-secondary text-nowrap" id="dismissButton" data-dismiss="modal">Dismiss</button></div>
+                    <div class="col-4"><button type="button" class="btn btn-success text-nowrap" id="saveChangesButton" disabled>Save changes</button></div>
+                </div>
             </div>
         </div>
     </div>
