--- a/templates/home.html
+++ b/templates/home.html
@@ -56,7 +56,7 @@
  </div>
 
 
-<div class="container ">
+<div class="container-fluid">
 
     <div id="alert-message" class="alert alert-danger" role="alert" style="display: none;">
         <!-- Messages area  -->
@@ -83,8 +83,8 @@
 
     </div>
 
-    <table id='home_results_table' class="table table-striped">
-        <thead>
+    <table id='home_results_table' class="table table-bordered table-striped table-hover">
+        <thead class="table-dark">
             <tr>
                 <th data-column="date_added">Date</th>
                 <th data-column="serial_number">Serial Number</th>
@@ -99,9 +99,9 @@
             {% if units %}
                 {% for unit in units %}
                 <tr record_id="{{ unit.id }}">
-                    <td>{{ unit.date_added }}</td>
+                    <td class="text-nowrap">{{ unit.date_added }}</td>
                     <td>{{ unit.serial_number }}</td>
-                    <td>{{ unit.part_number }}</td>
+                    <td class="text-nowrap">{{ unit.part_number }}</td>
                     <td>{{ unit.datecode }}</td>
                     <td>{{ unit.country }}</td>
                     <td class="raw-failure-column">
@@ -230,7 +230,7 @@
             <div class="modal-footer container"> 
                 
                 <button type="button" class="btn btn-danger text-nowrap" id="deleteRecordButton">Delete record</button> 
-                <button type="button" class="btn btn-secondary text-nowrap" id="dismissButton" data-dismiss="modal">Dismiss</button> 
+                <button type="button" class="btn btn-secondary text-nowrap" id="dismissButton" data-dismiss="modal" onclick="window.location.href='/'">Dismiss</button> 
                 <button type="button" class="btn btn-success text-nowrap" id="saveChangesButton" disabled>Save changes</button> 
                 
             </div>
@@ -355,15 +355,16 @@ function setMode(mode) {
                         data.records.forEach(record => {
                             $('#home_results_table tbody').append(`
                                 <tr comp_snpn="${record.composite_snpn}" record_id="${record.id}" class="${getRowClass(record.test_result)}">
-                                    <td>${record.date_added}</td>
+                                    <td class="text-nowrap">${record.date_added}</td>
                                     <td>${record.serial_number}</td>
-                                    <td>${record.part_number}</td>
+                                    <td class="text-nowrap">${record.part_number}</td>
                                     <td>${record.datecode}</td>
                                     <td>${record.country}</td>
                                     <td class="raw-failure-column"><span class="cell-content">${record.raw_failure}</span></td>
                                     <td>${record.test_result}</td>
                                 </tr>
                             `);
+                            toggleRawFailureColumn('');
                         });
                     }
                 });
@@ -499,9 +500,9 @@ function setMode(mode) {
                                 {
                                     // Append new rows to the table
                                     var row = '<tr comp_snpn="' + result.composite_snpn + '" record_id="' + result.id + '" class="' + getRowClass(result.test_result) + '">' +
-                                        '<td>' + result.datecode + '</td>' +
+                                        '<td class="text-nowrap">' + result.datecode + '</td>' +
                                         '<td>' + result.serial_number + '</td>' +
-                                        '<td>' + result.part_number + '</td>' +
+                                        '<td class="text-nowrap">' + result.part_number + '</td>' +
                                         '<td>' + result.datecode + '</td>' +
                                         '<td>' + result.country + '</td>' +
                                         '<td class="raw-failure-column"><span class="cell-content">' + result.raw_failure + '</span></td>' +
@@ -616,7 +617,7 @@ function setMode(mode) {
         });
 
         // Enable the "Save Changes" button when form fields are changed
-        $('#editForm input, #editForm select').on('input change', function() {
+        $('#editForm input, #editForm select, #editForm textarea').on('input change', function() {
             $('#saveChangesButton').prop('disabled', false);
         });
 
@@ -747,10 +748,13 @@ function setMode(mode) {
 
     // Function to show/hide the Raw Failure column
     function toggleRawFailureColumn(show) {
+        console.log('toggleRawFailureColumn executed with ' + show)
         if (show) {
             $(".raw-failure-column").show();
+            $(".cell-content").show();
         } else {
             $(".raw-failure-column").hide();
+            $(".cell-content").hide();
         }
     }
 
