--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,8 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
+       
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
@@ -167,22 +168,25 @@
 
             </li>
         </ul>
-
-        <div class="tab-content" id="myTabContent">
+         
+        
+        <div class="container-fluid tab-content" id="myTabContent">
             <div id="home" class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
 
             </div>
 
-            <div class="tab-pane fade" id="logs" role="tabpanel" aria-labelledby="logs-tab">
+            <div id="logs" class="tab-pane fade"  role="tabpanel" aria-labelledby="logs-tab">
 
                
             </div>
 
-            <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+            <div id="settings" class="tab-pane fade"  role="tabpanel" aria-labelledby="settings-tab">
 
 
             </div>
         </div>
+        
+
     </div>
 
 </body>
