--- a/templates/home.html
+++ b/templates/home.html
@@ -2,58 +2,49 @@
   
   
   <!-- Topbar Section -->
-   <div class="navbar navbar-dark bg-dark">
-
+  <div class="navbar navbar-dark bg-dark">
     <form class="col-12">
-        
         <div class="form-row">
             <input type="hidden" id="hiddenSBInput" name="hiddenSBInput">
-          <div class="col-2">
-
-            <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-lg btn-secondary active" for="searchMode">
-                    <input type="radio" name="options" id="searchMode" autocomplete="off" checked onclick="setMode('search')"> Search
-                </label>
-                <label class="btn btn-lg btn-secondary" for="addMode">
-                    <input type="radio" name="options" id="addMode" autocomplete="off" onclick="setMode('add')"> Add
-                </label>
+            
+            <!-- Button group for search and add modes -->
+            <div class="col-12 col-md-2 mb-2 mb-md-0">
+                <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
+                    <label class="btn btn-lg btn-secondary active" for="searchMode">
+                        <input type="radio" name="options" id="searchMode" autocomplete="off" checked onclick="setMode('search')"> Search
+                    </label>
+                    <label class="btn btn-lg btn-secondary" for="addMode">
+                        <input type="radio" name="options" id="addMode" autocomplete="off" onclick="setMode('add')"> Add
+                    </label>
+                </div>
             </div>
-
-          </div>
-          <div class="col-5">
-            <input type="text" class="form-control form-control-lg" id="searchBox" placeholder="Enter serial #">
-          </div>  
-          <div class="col col-3">
-
-
-            <select class="form-control form-control-lg" id="partNumberDropdown" onchange="handlePartNumberChange()">
-                <option value="any">Any</option>
-
-                {% if parts %}
-                {% for part in parts %}
-                <option value="{{ part.part_number }}">{{ part.part_number }}</option>
-                {% endfor %}
-                {% endif %}
-        
-                     
-                <option disabled>──────────</option>
-
-
-                <option  id="id_add_part_number" value="add_part_number">Add new part number</option>
-
-            </select>
-
-
-          </div>
-          <div class="col-2">
-            <button class="btn-primary form-control form-control-lg" id="actionButton">Search</button>
-          </div>    
+            
+            <!-- Search box -->
+            <div class="col-12 col-md-5 mb-2 mb-md-0">
+                <input type="text" class="form-control form-control-lg" id="searchBox" placeholder="Enter serial #">
+            </div>
+            
+            <!-- Part number dropdown -->
+            <div class="col-12 col-md-3 mb-2 mb-md-0">
+                <select class="form-control form-control-lg" id="partNumberDropdown" onchange="handlePartNumberChange()">
+                    <option value="any">Any</option>
+                    {% if parts %}
+                    {% for part in parts %}
+                    <option value="{{ part.part_number }}">{{ part.part_number }}</option>
+                    {% endfor %}
+                    {% endif %}
+                    <option disabled>──────────</option>
+                    <option id="id_add_part_number" value="add_part_number">Add new part number</option>
+                </select>
+            </div>
+            
+            <!-- Action button -->
+            <div class="col-12 col-md-2">
+                <button class="btn btn-primary form-control form-control-lg" id="actionButton">Search</button>
+            </div>
         </div>
- 
     </form>
-
-
- </div>
+</div>
 
 
 <div class="container-fluid">
