First kinda working version of advanced search reports

--- a/templates/home.html
+++ b/templates/home.html
@@ -491,7 +491,7 @@ function setMode(mode) {
                                 {
                                     // Append new rows to the table
                                     var row = '<tr comp_snpn="' + result.composite_snpn + '" record_id="' + result.id + '" class="' + getRowClass(result.test_result) + '">' +
-                                        '<td class="text-nowrap">' + result.datecode + '</td>' +
+                                        '<td class="text-nowrap">' + result.date_added + '</td>' +
                                         '<td>' + result.serial_number + '</td>' +
                                         '<td class="text-nowrap">' + result.part_number + '</td>' +
                                         '<td>' + result.datecode + '</td>' +
